improves error handling - adds some nice error dialog - adds a debug dialog - adds dummy test buttons to show the errors - ignores errors on init

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -2,9 +2,22 @@
   "title": "MyApp",
   "helloWorld": "Hallo Welt!",
   "hello": "Hallo {userName}",
-  "error": "Oops es ist etwas schief gelaufen!",
+  "ok": "Ok",
+  "errorTitle": "Oops! Unerwarteter Fehler 😭",
+  "error": "Es ist irgendetwas völlig schief gelaufen!\nAber keine Sorge - es kann den Besten passieren - und ist gerade dir passiert.\n\nVersuche es noch einmal oder gehe auf 'Hilfe'.",
+  "errorHttpTitle": "Oops! HTTP Fehler 😢",
+  "errorHttp": "Es sieht so, als hättest du eine Anfrage mit unzureichenden Berechtigungen oder Parametern getätigt.\n\nVersuche es noch einmal oder gehe auf 'Hilfe'.",
+  "errorServerTitle": "Oops! Server Fehler 😱",
+  "errorServer": "Es sieht so aus, als hätte deine Anfrage Probleme auf dem Server verursacht - hoffe der Server läuft noch...\n\nVersuche es noch einmal oder gehe auf 'Hilfe'.",
+  "errorNetworkTitle": "Oops! Netzwerk Fehler 🥺",
+  "errorNetwork": "Es sieht so aus, als ob deine Anfrage nicht gesendet werden konnte. Hast du Probleme mit dem Internet?\n\nVersuche es noch einmal oder gehe auf 'Hilfe'.",
+  "errorInvalidTokenAutoLogout": "Sitzung ist nicht länger verfügbar.\nDu wurdest automatisch ausgeloggt.",
   "noContent": "kein Inhalt",
   "dashboard": "Dashboard",
+  "simulateHardError": "Simuliere harten Fehler",
+  "simulateClientError": "Simuliere HTTP Client Fehler",
+  "simulateHttpError": "Simuliere HTTP Status Fehler",
+  "simulateTokenInvalidError": "Simuliere Invalid Token Fehler",
   "settings": "Einstellungen",
   "language": "Sprache",
   "languageChoice": "{choice, select, en {Englisch} de {Deutsch} systemLanuage {Systemsprache} other {}}",
@@ -20,5 +33,6 @@
   "login": "Anmelden",
   "code": "Code",
   "codeRequired": "Code erforderlich",
-  "codeIncorrect": "Upps 😥. Falscher Code"
+  "codeIncorrect": "Upps 😥. Falscher Code",
+  "debugTitle": "Debug 🐛"
 }
